--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,38 +1,54 @@
-# Book settings
-# Learn more at https://jupyterbook.org/customize/config.html
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you:
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 
-title: COVID-19 Age Groups Analysis
-author: UVA MLSys
-logo: images/coronavirus.jpg
-theme: jekyll-theme-minimal
+title: Interpreting Time Series Transformer Models
+email: khairulislamtanim@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Interpreting Time Series Transformer Models in Multi-Horizon COVID-19
+  Infection Forecasting and Age Sensitivity Analysis
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://uva-mlsys.github.io/COVID-19-age-groups/pages" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
-# Force re-execution of notebooks on each build.
-# See https://jupyterbook.org/content/execute.html
-execute:
-  execute_notebooks: force
+# Build settings
+theme: minima
+plugins:
+  - jekyll-feed
 
-# Define the name of the latex output file for PDF builds
-latex:
-  latex_documents:
-    targetname: book.tex
-
-# Add a bibtex file so that we can create citations
-bibtex_bibfiles:
-  - references.bib
-
-# https://jupyterbook.org/en/stable/tutorials/references.html#create-a-bibtex-file
-sphinx:
-  config:
-    bibtex_reference_style: author_year
-
-# Information about where the book exists on the web
-repository:
-  url: https://github.com/UVA-MLSys/gpce-covid  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
-
-# Add GitHub buttons to your book
-# See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
-html:
-  use_issues_button: true
-  use_repository_button: true
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
