--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,8 +23,8 @@ email: khairulislamtanim@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Interpreting Time Series Transformer Models in Multi-Horizon COVID-19
   Infection Forecasting and Age Sensitivity Analysis
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://uva-mlsys.github.io/COVID-19-age-groups/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/COVID-19-age-groups" # the subpath of your site, e.g. /blog
+url: "https://uva-mlsys.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
@@ -32,7 +32,6 @@ url: "https://uva-mlsys.github.io/COVID-19-age-groups/" # the base hostname & pr
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-redirect-from
 
 # Exclude from processing.
 # The following items will not be processed, by default.
